added new badges with live app store link

--- a/index.html
+++ b/index.html
@@ -65,11 +65,20 @@
                          Northeastern has <strong>hundreds</strong> of events each week.
                          <br>Discover them with Parade.
                        </p>
+                     <div style="flex-direction: row">
+                       <a href="https://itunes.apple.com/us/app/parade-events/id1380171412?ls=1&mt=8">
                        <img
-                       onclick="alert('Coming soon! Sign up for our mailing list BELOW to get an invite during our testing stage!')"
+                       style="width:25%;height:auto;padding-right:0;margin-right:0"
                        class='appDownloadButtons'
-                       src='./assets/app-download-buttons.png' />
+                       src='./assets/app-store-badge.svg' /></a>
+                       <a href="#">
+                       <img
+                       onclick="alert('Android beta starting late August! Join our mailing list below for additional info.')"
+                       style="width:25%;height:auto;padding-left:0;margin-left:0"
+                       class='appDownloadButtons'
+                       src='./assets/play-store-badge.png' /></a>
                      </div>
+                 </div>
                      <!-- <div class="stickRight"> -->
                           <img class='iphone' src='./assets/aoun-partial.png'>
                       <!-- </div> -->
@@ -264,12 +273,11 @@
             <!-- START THIRD PANEL -->
             <div id="Contact" class="prettyColor thirdPanel">
 
-              <h2 style="font-size: 50px;margin-bottom:15px">Have ideas?</h2>
+              <!-- <h2 style="font-size: 50px;margin-bottom:15px">Have ideas?</h2>
               <p style="font-size:20px;margin-top:0px">
                 We're creating Parade for <i>you</i>. Whether you're a club president or new student,
                 let us know how we can make Parade better.
-              <!-- </p> -->
-              <!-- <p style="font-size:28px;margin-top:0px"> -->
+
                 <br><a href='mailto:ideas@parade.events'> <strong>Let us know!</strong></a>
               </p>
 
@@ -277,7 +285,7 @@
               <p style="font-size:20px;margin-top:0px">
                   Are you a Northeastern student interested in joining the Parade team?
                   <br><a href="mailto:outreach@parade.events"><strong>Reach out!</strong></a>
-              </p>
+              </p> -->
 
 
               <h2 style="font-size: 50px;margin-bottom:15px">Stay informed!</h2>
