added new badges with live app store link

--- a/index.html
+++ b/index.html
@@ -287,12 +287,24 @@
                   <br><a href="mailto:outreach@parade.events"><strong>Reach out!</strong></a>
               </p> -->
 
+              <h2 style="font-size: 50px;margin-bottom:15px">New to Parade?</h2>
+              <p style="font-size:20px;margin-top:0px">
+                Check out our latest blog post:
+                <a href="https://parade.events/blog/welcome-guide">The Parade Welcome Guide</a>.
+
+              </p>
+
+              <h2 style="font-size: 50px;margin-bottom:15px">Idea or Feedback?</h2>
+              <p style="font-size:20px;margin-top:0px">
+                Find a bug? Have a feature request? We'd love to <a href="mailto:feedback@parade.events">hear from you</a>.
+              </p>
 
               <h2 style="font-size: 50px;margin-bottom:15px">Stay informed!</h2>
               <p style="font-size:20px;margin-top:0px">
-                Join our mailing list for beta testing opportunities,
-                and to hear more Parade related news!
+                Join our mailing list to keep up with Parade-related news!
               </p>
+
+
 
 
               <!-- Begin MailChimp Signup Form -->
