added linkedins for carter and kathleen

--- a/index.html
+++ b/index.html
@@ -188,11 +188,9 @@
                     src='./assets/faces/carter.png'
                     alt='carter' />
                     <div>
-                      <!-- <a style="text-decoration: none" href="https://github.com/cartertune">
-                        <img style="padding:10px;width:30px;height:30px"src='./assets/social/website.png'/>
-                      </a> -->
-                      <a style="text-decoration: none" href="mailto:carter@parade.events">
-                        <img style="padding:10px;width:30px;height:30px"src='./assets/social/email.png'/>
+                      <!-- LICENSE: Icons made by SimpleIcon from www.flaticon.com and is licensed by http://creativecommons.org/licenses/by/3.0/ -->
+                      <a style="text-decoration: none" href="https://www.linkedin.com/in/carter-tune-14a287127/">
+                        <img style="padding:10px;padding-top:15px;width:20px;height:20px"src='./assets/social/linkedin.png'/>
                       </a>
                     </div>
 
@@ -214,9 +212,6 @@
                       <a style="text-decoration: none" alt="joshspicer.com" href="https://joshspicer.com/">
                         <img style="padding:10px;width:30px;height:30px"src='./assets/social/website.png'/>
                       </a>
-                      <a style="text-decoration: none" href="mailto:josh@parade.events">
-                        <img style="padding:10px;width:30px;height:30px"src='./assets/social/email.png'/>
-                      </a>
                     </div>
 
                     <h2 style="margin-top: 8px;font-size:35px;margin-bottom:2px">Josh Spicer</h2>
@@ -237,11 +232,8 @@
                   src='./assets/faces/kathleen.jpg'
                   alt='kathleen' />
                   <div>
-                    <!-- <a style="text-decoration: none" href="https://joshspicer.com/">
-                      <img style="padding:10px;width:30px;height:30px"src='./assets/social/website.png'/>
-                    </a> -->
-                    <a style="text-decoration: none" href="mailto:kathleen@parade.events">
-                      <img style="padding:10px;padding-bottom: 14px;width:30px;height:30px"src='./assets/social/email.png'/>
+                    <a style="text-decoration: none" href="https://www.linkedin.com/in/kathleen-ballard-7009b011b/">
+                        <img style="padding:10px;padding-top:15px;margin-bottom:5px;width:20px;height:20px"src='./assets/social/linkedin.png'/>
                     </a>
                   </div>
                   <h2 style="margin-top: 8px;font-size:35px;margin-bottom:2px">Kathleen Ballard</h2>
@@ -262,9 +254,6 @@
                         <div>
                           <a style="text-decoration: none" alt="http://pranitaloki.com" href="http://pranitaloki.com/">
                             <img style="padding:10px;width:30px;height:30px"src='./assets/social/website.png'/>
-                          </a>
-                          <a style="text-decoration: none" href="mailto:pranita@parade.events">
-                            <img style="padding:10px;width:30px;height:30px"src='./assets/social/email.png'/>
                           </a>
                       </div>
                         <h2 style="margin-top: 8px;font-size:35px;margin-bottom:2px">Pranita Lokinendi</h2>
