fixed info icon

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
               <h2 style="font-size: 50px;margin-bottom:15px">Latest Blog Post</h2>
                <a style="text-decoration:none;color:'#fff'" href=" https://parade.events/blog/welcome-guide/ ">
-                 <div class="announceTitle"><img class="infoIcon" src="./assets/info-white.png/">  Parade Welcome Guide</div>
+                 <div class="announceTitle"><img class="infoIcon" src="/assets/info-white.png/">  Parade Welcome Guide</div>
                <div class="announceDescription"> Aug. 21 -    Welcome to Parade! Everybody on The Parade Team is so excited
                  to get Parade in the  hands of students! We’re calling this initial launch our “Beta Phase”, where we encourage...</div></a></span>
 
